<resources>
    <string name="logo">Weather Today</string>
    <string name="logoSearch">Your city</string>
    <string name="Search">Search</string>
    <string name="Temperature">Temperature: </string>
    <string name="Wind">Wind: </string>
    <string name="Tap">TAP!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="name_city">Write the city:</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="clear_sky">Хорошего дня!</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="feels_like">Feels like</string>
    <string name="timezone">Timezone</string>
    </resources>